--- a/index.html
+++ b/index.html
@@ -6122,5 +6122,171 @@ function checkAnswer25() {
 }
 </script>
 
+
+<script>
+function checkAnswer28() {
+  const correctAnswers = ['D'];
+  const selected = Array.from(document.querySelectorAll('input[name="q28"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result28');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer30() {
+  const correctAnswers = ['B', 'C'];
+  const selected = Array.from(document.querySelectorAll('input[name="q30"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result30');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer31() {
+  const correctAnswers = ['A', 'E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q31"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result31');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer32() {
+  const correctAnswers = ['B'];
+  const selected = Array.from(document.querySelectorAll('input[name="q32"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result32');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer33() {
+  const correctAnswers = ['B', 'C', 'D'];
+  const selected = Array.from(document.querySelectorAll('input[name="q33"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result33');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer35() {
+  const correctAnswers = ['D', 'E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q35"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result35');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer38() {
+  const correctAnswers = ['A', 'D'];
+  const selected = Array.from(document.querySelectorAll('input[name="q38"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result38');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer40() {
+  const correctAnswers = ['B', 'C', 'E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q40"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result40');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer42() {
+  const correctAnswers = ['C'];
+  const selected = Array.from(document.querySelectorAll('input[name="q42"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result42');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer44() {
+  const correctAnswers = ['C', 'E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q44"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result44');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer45() {
+  const correctAnswers = ['B'];
+  const selected = Array.from(document.querySelectorAll('input[name="q45"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result45');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer46() {
+  const correctAnswers = ['D', 'E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q46"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result46');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer47() {
+  const correctAnswers = ['E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q47"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result47');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer48() {
+  const correctAnswers = ['C'];
+  const selected = Array.from(document.querySelectorAll('input[name="q48"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result48');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
+<script>
+function checkAnswer49() {
+  const correctAnswers = ['A', 'D', 'E'];
+  const selected = Array.from(document.querySelectorAll('input[name="q49"]:checked')).map(cb => cb.value);
+  const resultDiv = document.getElementById('result49');
+  const isCorrect = selected.length === correctAnswers.length && selected.every(val => correctAnswers.includes(val));
+  resultDiv.innerText = isCorrect ? "✅ Correct!" : "❌ Incorrect. Correct answer: " + correctAnswers.join(", ");
+  resultDiv.style.color = isCorrect ? "green" : "red";
+}
+</script>
+
 </body>
 </html>
